--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -131,9 +131,14 @@ input[type="submit"] {
 
 }
 
-#user_email {
+.loginb #user_email {
   border-width: 0 0 0 0;
   margin-top: 4em;
+}
+
+.signupfor #user_email {
+  border-width: 0 0 0 0;
+  margin-top: 2em;
 }
 
 #remlab {
